tmp.log
src/polyblock.c: In function ‘emit_decrypt_xor_loop’:
src/polyblock.c:110:49: error: unused parameter ‘target_blk’ [-Werror=unused-parameter]
  110 | static char *emit_decrypt_xor_loop(t_polyblock *target_blk, t_diff_result *diff, char *out_src)
      |                                    ~~~~~~~~~~~~~^~~~~~~~~~
src/polyblock.c: In function ‘generate_decrypt_stub’:
src/polyblock.c:142:49: error: unused parameter ‘target_blk’ [-Werror=unused-parameter]
  142 | static char *generate_decrypt_stub(t_polyblock *target_blk, t_diff_result *diff,
      |                                    ~~~~~~~~~~~~~^~~~~~~~~~
At top level:
src/polyblock.c:142:14: error: ‘generate_decrypt_stub’ defined but not used [-Werror=unused-function]
  142 | static char *generate_decrypt_stub(t_polyblock *target_blk, t_diff_result *diff,
      |              ^~~~~~~~~~~~~~~~~~~~~
src/polyblock.c:110:14: error: ‘emit_decrypt_xor_loop’ defined but not used [-Werror=unused-function]
  110 | static char *emit_decrypt_xor_loop(t_polyblock *target_blk, t_diff_result *diff, char *out_src)
      |              ^~~~~~~~~~~~~~~~~~~~~
src/polyblock.c:75:12: error: ‘compute_diff’ defined but not used [-Werror=unused-function]
   75 | static int compute_diff(t_block_variant *cipher, t_block_variant *plain, t_diff_result *diff)
      |            ^~~~~~~~~~~~
cc1: all warnings being treated as errors
make: *** [Makefile:30: obj/polyblock.o] Error 1
